--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "关于"
-description: "Пролетарии всех стран, соединяйтесь!"
+description: "Пусть обычные люди станут хаерами, и пусть хаеры живут счастливо."
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
